syntax = "proto3";
option go_package = "code-analyser/protos/pb/output/languageSpecific";

message LibraryOutput{
  // list of all library
  enum Type {
    REPLACED = 0;
    EXTERNAL = 1;
  }
  Type type = 1;
  bool used = 2;
  string name = 3;
  string version = 4;
  float percentageUsed = 5;
}
