syntax = "proto3";
option go_package = "./protos";

import "protos/outputs/global/command.proto";

message BuildCommandsOutput{
  // check BuildCommands
  bool used = 1;
  // list of all BuildCommands
  repeated Command buildCommands = 2;
}

